--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,50 @@
 .offerSlider .slick-list {
     padding: 0 20% 0;
 }
+@media only screen and (max-width: 1024px) {
+    .offerSlider .slick-list {
+        padding: 0 34% 0;
+    }
+  }
+input{outline: none;}
+
+.bordercolour{
+    border: 1px solid black;
+}
+.pic1{
+    background-image: url('./Pages/Assets/homeCarousel/pic1.jpg') !important;
+    background-size: cover;
+    background-repeat:no-repeat ;
+    background-position: center;
+}
+.pic2{
+    background-image: url('./Pages/Assets/homeCarousel/pic2.jpg') !important;
+    background-size: cover;
+    background-repeat:no-repeat ;
+    background-position: center;
+}
+
+.pic3{
+    background-image: url('./Pages/Assets/homeCarousel/pic3.jpg') !important;
+    background-size: cover;
+    background-repeat:no-repeat ;
+    background-position: center;
+}
+
+
+.pic4{
+    background-image: url('./Pages/Assets/homeCarousel/pic4.jpg') !important;
+    background-size: cover;
+    background-repeat:no-repeat ;
+    background-position: center;
+}
+
+.pic5{
+    background-image: url('./Pages/Assets/homeCarousel/pic5.jpg') !important;
+    background-size: cover;
+    background-repeat:no-repeat ;
+    background-position: center;
+}
+.marginmtop{
+    margin-top: -11rem;
+}
