--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,9 @@ input{outline: none;}
 .marginmtop{
     margin-top: -11rem;
 }
+
+* {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+  }
